fix overflow of Admonition content

--- a/src/theme/Admonition/styles.module.css
+++ b/src/theme/Admonition/styles.module.css
@@ -36,6 +36,7 @@
 .admonitionContent {
   padding: 1rem;
   background: var(--click-color-note-background);
+  overflow: hidden;
 }
 
 .admonitionContent > :last-child {
